@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix rotating loader entities
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.2
 Date: 2022-11-13
